Added style and functionality
Styled the page for a more pleasing look
When clicked the hovered square turns black
When double click the color gets back to the previous color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <button id="newGridBtn">Generate a new grid</button>
+    <button id="newGridBtn" class="button-5">Generate a new grid</button>
     <div id="container"></div>
 </body>
 </html>
